# LabWork6

./: CMakeLists.txt  Gtests.cpp  Main.cpp  README.md  Task_1.h  Task_2.h  Task_3.h
